--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>D3 task</title>
 </head>
 <body>
-  <!-- <div id = "chartarea"></div> -->
+  <div id = "chartarea"></div>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="./app.js"></script>
 </body>
