--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>D3 Pokemon</title>
 </head>
 <body>
-  <h1>D3 Pokemon</h1>
+  <h1>Pokemon Kanto Starters Stats</h1>
   <svg id="pokemon">
   </svg>
   <script src="index.js"></script>
