--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<title>D3-Fifa Rangking</title>
 	<style>
+		svg {
+			margin-left: 100px;
+			margin-bottom: 50px;
+		}
+
+		.bar1 {
+			margin-right: 50px;
+		}
+
 		.text-rotate {
       writing-mode: tb-rl
     }
@@ -49,7 +58,11 @@
 	</div>
 	<br>
 	<div class="card">
-		<h2>GoalsScored in world cup with bar chart</h2>
+			<h2>Goals scored in each world cup with legend bar</h2>
+			<div id="chartBar2"></div>
+		</div>
+	<div class="card">
+		<h2>Goals scored in each world cup with bar charts</h2>
 		<div id="chartBar1"></div>
 	</div>
 	
