--- a/index.html
+++ b/index.html
@@ -62,14 +62,9 @@
 			<div id="chartBar2"></div>
 		</div>
 	<div class="card">
-		<h2>Goals scored in each world cup with bar charts</h2>
+		<h2>Goals scored in at world cup (1930-2014) with bar charts</h2>
 		<div id="chartBar1"></div>
 	</div>
-	
-	<!-- <hr>
-	<h2>Ranking with bubble chart sort from lowest pont to highest</h2>
-	<div id="chartCircle"></div>
-	<hr>
 	<h2>Pie chart show the previous point scale</h2>
 	<div id="chartPie"></div> -->
 	<script src="d3.js"></script>
