--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<script src="https://d3js.org/d3.v5.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	  crossorigin="anonymous">
 	<title>D3-Fifa Rangking</title>
 	<style>
-		svg {
-			margin-left: 100px;
+		h2 {
+			width: 150%;
+		}
+
+		svgLegend {
+			margin-left: 10px;
 			margin-bottom: 50px;
+		}
+
+		svg {
+			margin-top: 30px;
+			margin-left: 10px;
 		}
 
 		.bar1 {
@@ -19,8 +29,8 @@
 		}
 
 		.text-rotate {
-      writing-mode: tb-rl
-    }
+			writing-mode: tb-rl
+		}
 
 		.card {
 			background-color: azure;
@@ -53,20 +63,30 @@
 		<hr>
 	</div>
 	<div class="card">
-		<h2>Fifa nation rangking with bar chart</h2>
+		<h2>Bar Chart Show The Top Ten FIFA Nation Rangk</h2>
 		<div id="chartBar"></div>
 	</div>
 	<br>
 	<div class="card">
-			<h2>Goals scored in each world cup with legend bar</h2>
-			<div id="chartBar2"></div>
+		<div class="container col-md-12">
+			<div class="row">
+				<div class="col-md-3">
+					<h4>Legend from Bar</h4>
+					<div id="chartBar2"></div>
+				</div>
+				<div class="col-md-6">
+					<h2>Bar Chart Show The Goal Scored at World Cup (1930-2014)</h2>
+					<div id="chartBar1"></div>
+				</div>
+			</div>
 		</div>
-	<div class="card">
-		<h2>Goals scored in at world cup (1930-2014) with bar charts</h2>
-		<div id="chartBar1"></div>
 	</div>
-	<h2>Pie chart show the previous point scale</h2>
-	<div id="chartPie"></div> -->
+	<br>
+	<div class="card">
+		<h2>Pie Chart Show The Goal Scored at World Cup (1930-2014)</h2>
+		<div id="chartPie"></div> -->
+	</div>
+
 	<script src="d3.js"></script>
 </body>
 
